--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "CodeIT"
+name = "EnjoyIt"
 license = "MIT"
-licenselink = "https://github.com/sunt-programator/CodeIT/blob/master/LICENSE"
+licenselink = "https://github.com/xinyu-yang/EnjoyIt/blob/master/LICENSE"
 description = "A clean, elegant but advanced blog theme for Hugo."
-homepage = "https://codeit.suntprogramator.dev/"
+homepage = "https://xinyu-yang.github.io/"
 tags = [
   "blog",
   "clean",
@@ -25,10 +25,10 @@ features = [
 min_version = "0.62.0"
 
 [author]
-  name = "Victor Pogor"
-  homepage = "https://suntprogramator.dev/"
+  name = "Xinyu Yang"
+  homepage = "https://xinyu-yang.github.io/"
 
 [original]
-  name = "LoveIt"
-  homepage = "https://hugoloveit.com/"
-  repo = "https://github.com/dillonzq/loveit"
+  name = "CodeIT"
+  homepage = "https://suntprogramator.dev/"
+  repo = "https://github.com/sunt-programator/CodeIT"
