--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -452,7 +452,7 @@ ignoreErrors = ["error-remote-getjson"]
       # title name
       name = "EnjoyIt"
       # you can add extra information before the name (HTML format is supported), such as icons
-      pre = "<i class='fas fa-laptop-code fa-fw'></i>"
+      pre = "<i class='fas fa-heart fa-fw'></i>"
       # you can add extra information after the name (HTML format is supported), such as icons
       post = ""
       # whether to use typeit animation for title name
