--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "enjoyit-src",
   "description": "EnjoyIt theme source file",
   "version": "0.1.1",
-  "homepage": "https://xinyu-yang.github.io/",
+  "homepage": "https://blog.luckyoung.org/",
   "author": "Xinyu Yang",
   "license": "MIT",
   "private": true,
