--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -29,7 +29,7 @@ ignoreErrors = ["error-remote-getjson"]
     # whether to include Chinese/Japanese/Korean
     hasCJKLanguage = false
     # default amount of posts in each pages
-    paginate = 12
+    #paginate = 12
     # [UA-XXXXXXXX-X] google analytics code
     googleAnalytics = ""
     # copyright description used only for seo schema
@@ -155,7 +155,7 @@ ignoreErrors = ["error-remote-getjson"]
         [languages.en.params.home.posts]
           enable = true
           # special amount of posts in each home posts page
-          paginate = 6
+          #paginate = 6
       # Social config in home page
       [languages.en.params.social]
         GitHub = "xxxx"
@@ -234,7 +234,7 @@ ignoreErrors = ["error-remote-getjson"]
     # 是否包括中日韩文字
     hasCJKLanguage = true
     # 默认每页列表显示的文章数目
-    paginate = 12
+    #paginate = 12
     # [UA-XXXXXXXX-X] 谷歌分析代号
     googleAnalytics = ""
     # 版权描述，仅仅用于 SEO
@@ -357,7 +357,7 @@ ignoreErrors = ["error-remote-getjson"]
         [languages.zh-cn.params.home.posts]
           enable = true
           # 主页每页显示文章数量
-          paginate = 6
+          #paginate = 6
       # 主页的社交信息设置
       [languages.zh-cn.params.social]
         GitHub = "xxxx"
@@ -480,7 +480,7 @@ ignoreErrors = ["error-remote-getjson"]
   # Section (all posts) page config
   [params.section]
     # special amount of posts in each section page
-    paginate = 20
+    #paginate = 20
     # date format (month and day)
     dateFormat = "01-02"
     # amount of RSS pages
@@ -489,7 +489,7 @@ ignoreErrors = ["error-remote-getjson"]
   # List (category or tag) page config
   [params.list]
     # special amount of posts in each list page
-    paginate = 20
+    #paginate = 20
     # date format (month and day)
     dateFormat = "01-02"
     # amount of RSS pages
